search for BEER!

--- a/development.ini
+++ b/development.ini
@@ -11,7 +11,7 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes = 
+pyramid.includes =
     pyramid_debugtoolbar
 
 # By default, the toolbar only appears for clients from IP addresses
@@ -26,6 +26,16 @@ pyramid.includes =
 use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
+
+[DEFAULT]
+
+google_maps_key = YOUR_GOOGLE_MAPS_KEY
+twitter_key = YOUR_TWITTER_APP_KEY
+twitter_secret = YOUR_TWITTER_APP_SECRET
+twitter_access_token = YOUR_TWITTER_APP_ACCESS_TOKEN
+twitter_access_secret = YOUR_TWITTER_APP_ACCESS_TOKEN_SECRET
+
+search_for = beer,brewery
 
 ###
 # logging configuration
