--- a/production.ini
+++ b/production.ini
@@ -21,6 +21,16 @@ use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 
+[DEFAULT]
+
+google_maps_key = YOUR_GOOGLE_MAPS_KEY
+twitter_key = YOUR_TWITTER_APP_KEY
+twitter_secret = YOUR_TWITTER_APP_SECRET
+twitter_access_token = YOUR_TWITTER_APP_ACCESS_TOKEN
+twitter_access_secret = YOUR_TWITTER_APP_ACCESS_TOKEN_SECRET
+
+search_for = beer,brewery
+
 ###
 # logging configuration
 # http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
