expand search to multiple languages and variations

--- a/development.ini
+++ b/development.ini
@@ -35,7 +35,7 @@ twitter_secret = YOUR_TWITTER_APP_SECRET
 twitter_access_token = YOUR_TWITTER_APP_ACCESS_TOKEN
 twitter_access_secret = YOUR_TWITTER_APP_ACCESS_TOKEN_SECRET
 
-search_for = beer,brewery
+search_for = Bier,Birrë,Biræ,Pivo,Garagardoa,Piva,Beer,Bier,Bira,Cervesa,Jij,Pi jiu,Pivo,Pivo,øl,Bier,Ale,Beer,Brew,Brewski,Biero,õlu,Bjór,øl,Kalja,Olut,Bier,Bière,Bier,Beòir,Leann,Cervexa,Cerveja,Bier,Beer,Mpíra,Zýthos,Pia,Beera,Beer,Sör,Öl,Bjór,Biro,Bir,Bira,Beoir,Birra,Biiru,Mek-ju,Bîre,Vuola,Cerevisia,Cervisia,Alus,Alus,Bbiya,Pivo,Bir,Lhune,Beer,Biro,Biyar,Jad,øl,Bièra,Cervesa,Ab'jo,Bia,Piwo,Cerveja,Loura Gelada,Sirbisa,Biera,Bere,Pivo,Pivo,Jwala,Pivo,Pivo,Cerveza,Bia,Pombe,Öl,Serbesa,Bia,Bira,Pivo,Bia,Bil,Cwrw,Ibhiye,Bir,Utshwala
 
 ###
 # logging configuration
